<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".teacher.AssignmentFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:id="@+id/tvasmntHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/amaranth"
                android:text="@string/Tasmnthead"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etTasmntsub"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/curved"
                android:hint="@string/etTasmntsub"
                android:paddingStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvasmntHeading" />

            <EditText
                android:id="@+id/etTasmnttopic"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/curved"
                android:hint="@string/etTasmnttopic"
                android:paddingStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etTasmntsub" />

            <EditText
                android:id="@+id/etTasmntdate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/curved"
                android:focusable="false"
                android:hint="@string/etTasmntdate"
                android:paddingStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etTasmnttopic" />

            <EditText
                android:id="@+id/etTasmntStd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/curved"
                android:hint="Class and Division"
                android:paddingStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etTasmntdate" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_Tasmnt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/app_btn"
                android:fontFamily="@font/amaranth"
                android:text="@string/postmessagebtn"
                android:gravity="center"
                android:textAllCaps="false"
                android:textSize="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etTasmntStd" />

            <TextView
                android:id="@+id/tvHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/amaranth"
                android:text="Assignments History"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_Tasmnt" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/feedback_tile"
                app:layout_constraintTop_toBottomOf="@id/tvHistory" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>